# ghosts_buster

./: .gitignore  LICENCE  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: pyproject-checkpoint.toml  requirements-checkpoint.txt
docs/source/: conf.py  display_image.rst  ghost_buster.rst  ghosts_corr.rst  ghosts_fit.rst  ghosts_simu.rst  index.rst  modules.rst  sources_image.rst
notebooks/: LSST PSF.ipynb  LSST ghosts.ipynb  LSST trace.ipynb  LSST_AiryRings.ipynb  LSST_ComCamGhost.ipynb  LSST_ghosts_analysis.ipynb  LSST_ghosts_animation.ipynb  TestUpdatePkg.ipynb
notebooks/.ipynb_checkpoints/: LSST PSF-checkpoint.ipynb  LSST trace-checkpoint.ipynb  LSST_AiryRings-checkpoint.ipynb  LSST_ComCamGhost-checkpoint.ipynb  LSST_ghosts_analysis-checkpoint.ipynb  TestUpdatePkg-checkpoint.ipynb
notebooks/comcam_ghosts/: Fit048.ipynb  get_radec.ipynb  read_ghost.ipynb  show_ghost.ipynb  test_clean.ipynb
script/: script_data_ghost.py  script_gif_ghost.py  script_hist_ghost.py  script_plot_ghost.py
scripts/: fitpos.py  fitpos.sh  fitrot.py  fitrot.sh  fitscale.py  fitscale.sh  polychrom.sh  script_data_ghost.py  script_hist_ghost.py  slurm-60137165.out
scripts/.ipynb_checkpoints/: fitlambda-checkpoint.py  fitlambda-checkpoint.sh  fitpos-checkpoint.py  fitrot-checkpoint.py  fitrot-checkpoint.sh  fitscale-checkpoint.py  fittransmission-checkpoint.py  fittransmission-checkpoint.sh  polychrom-checkpoint.py  polychrom-checkpoint.sh  script_data_ghost-checkpoint.py  slurm-60107170-checkpoint.out  (+1 more)
src/: __init__.py
(+13 files in other folders)
